feat: 添加比赛项目api和比赛项目界面
