# hello/api/swagger/swagger.yaml
@@ -21,6 +21,16 @@ tags:
     externalDocs:
       description: "user"
       url: "http://localhost:8080"
+  - name: "coach"
+    description: "sport info coach"
+    externalDocs:
+      description: "coach"
+      url: "http://localhost:8080"
+  - name: "apply"
+    description: "sport info apply"
+    externalDocs:
+      description: "apply"
+      url: "http://localhost:8080"
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -32,6 +42,248 @@ consumes:
 produces:
   - application/json
 paths:
+  /applyinfo:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: applyinfo
+    post:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: applyinfopost
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: array
+          items:
+            type: "object"
+            required:
+              - nubmerid
+              - name
+              - itemone
+              - itemtwo
+              - itemthree
+              - itemfour
+              - sex
+              - dateday
+              - resid
+              - type
+            properties:
+              nubmerid:
+                type: number
+                example: 33333
+              name:
+                type: string
+                example: 'admin'
+              itemone:
+                type: string
+                example: 'admin'
+              itemtwo:
+                type: string
+                example: 'admin'
+              itemthree:
+                type: string
+                example: 'admin'
+              itemfour:
+                type: string
+                example: 'admin'
+              sex:
+                type: string
+                example: 'admin'
+              dateday:
+                type: string
+                format: date
+                example: '2016-04-01'
+              resid:
+                type: number
+                example: 1111
+              type:
+                type: string
+                example: 'ssss'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: applyinfoput
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: array
+          items:
+            type: "object"
+            required:
+              - nubmerid
+              - name
+              - itemone
+              - itemtwo
+              - itemthree
+              - itemfour
+              - sex
+              - dateday
+              - resid
+              - type
+            properties:
+              nubmerid:
+                type: number
+                example: 33333
+              name:
+                type: string
+                example: 'admin'
+              itemone:
+                type: string
+                example: 'admin'
+              itemtwo:
+                type: string
+                example: 'admin'
+              itemthree:
+                type: string
+                example: 'admin'
+              itemfour:
+                type: string
+                example: 'admin'
+              sex:
+                type: string
+                example: 'admin'
+              dateday:
+                type: string
+                format: date
+                example: '2016-04-01'
+              resid:
+                type: number
+                example: 1111
+              type:
+                type: string
+                example: 'ssss'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: applyinfoget
+      consumes:
+      - "application/json"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /coachinfo:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: coachinfo
+    put:
+      tags:
+        - "coach"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: coachinfoput
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: object
+          required:
+            - unitname
+            - groupname
+            - groupleader
+            - coach
+            - doctor
+            - worker
+            - tel
+          properties:
+            unitname:
+              type: string
+              example: 'admin'
+            groupname:
+              type: string
+              example: 'admin'
+            groupleader:
+              type: string
+              example: 'admin'
+            coach:
+              type: string
+              example: 'admin'
+            doctor:
+              type: string
+              example: 'admin'
+            worker:
+              type: string
+              example: 'admin'
+            tel:
+              type: number
+              example: 1111
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags:
+        - "coach"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: coachinfoget
+      consumes:
+      - "application/json"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /username:
     # binds a127 app logic to a route
     x-swagger-router-controller: user
